--- a/angular-front/tsconfig.json
+++ b/angular-front/tsconfig.json
@@ -21,7 +21,12 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@assets": ["assets/*"],
+      "@shared/*": ["app/shared/*"],
+      "@home": ["app/home/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
