--- a/angular-front/angular.json
+++ b/angular-front/angular.json
@@ -37,7 +37,8 @@
               ]
             },
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/fonts.scss"
             ],
             "scripts": []
           },
@@ -105,7 +106,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles/fonts.scss"
             ],
             "scripts": []
           }
