--- a/angular-front/tsconfig.json
+++ b/angular-front/tsconfig.json
@@ -25,7 +25,10 @@
     "paths": {
       "@assets": ["assets/*"],
       "@shared/*": ["app/shared/*"],
-      "@home": ["app/home/*"]
+      "@home": ["app/home/*"],
+      "@information": ["app/information/*"],
+      "@photo": ["app/photo/*"],
+      "@register": ["app/register/*"]
     }
   },
   "angularCompilerOptions": {
