--- a/angular-front/package.json
+++ b/angular-front/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "line-awesome": "^1.3.0",
     "rfs": "^9.0.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
