--- a/angular-front/tsconfig.json
+++ b/angular-front/tsconfig.json
@@ -29,12 +29,12 @@
       "@information": ["app/information/*"],
       "@photo": ["app/photo/*"],
       "@register": ["app/register/*"]
-    }
+    },
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   }
 }
