--- a/angular-front/package.json
+++ b/angular-front/package.json
@@ -24,7 +24,12 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "google-libphonenumber": "^3.2.32",
+    "intl-tel-input": "^17.0.3",
     "line-awesome": "^1.3.0",
+    "ngx-bootstrap": "^8.0.0",
+    "ngx-intl-tel-input": "^3.2.0",
+    "ngx-logger": "^5.0.11",
     "rfs": "^9.0.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
