--- a/angular-front/tsconfig.json
+++ b/angular-front/tsconfig.json
@@ -23,6 +23,7 @@
       "dom"
     ],
     "paths": {
+      "@angular/*": ["./node_modules/@angular/*"],
       "@assets": ["assets/*"],
       "@shared/*": ["app/shared/*"],
       "@home": ["app/home/*"],
