--- a/spring-back/src/main/resources/application.properties
+++ b/spring-back/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:15432/weddb
+spring.datasource.username=wedweb
+spring.datasource.password=postgres
