--- a/spring-back/src/main/resources/application.properties
+++ b/spring-back/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:15432/weddb
 spring.datasource.username=wedweb
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
