--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
+    "heroku-postbuild": "ng build",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
