--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ng": "ng",
     "heroku-postbuild": "ng build",
     "start": "ng serve",
+    "start:prod": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -29,12 +30,14 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "intl-tel-input": "^17.0.3",
     "line-awesome": "^1.3.0",
     "ngx-bootstrap": "^8.0.0",
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-logger": "^5.0.11",
+    "path": "^0.12.7",
     "rfs": "^9.0.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
