--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ng": "ng",
     "heroku-postbuild": "ng build --aot",
     "start": "ng serve",
-    "start:prod": "node server.js",
+    "start:prod": "node server/server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -25,13 +25,13 @@
     "@angular/core": "^14.2.12",
     "@angular/forms": "^14.2.12",
     "@angular/localize": "^14.2.12",
-    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "google-libphonenumber": "^3.2.32",
     "intl-tel-input": "^17.0.3",
