--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wed-form",
+  "name": "wedformfront",
   "version": "1.0.0",
   "engines": {
     "node": "18.15.0",
@@ -7,9 +7,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-postbuild": "ng build --aot",
+    "heroku-postbuild": "ng build --configuration production",
     "start": "ng serve",
-    "start:prod": "node server/server.js",
+    "start:prod": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
