--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,38 @@
+#Specifies the number of worker processes Nginx will use. In your configuration, you have set it to 1,
+#which means Nginx will only use one worker process.
 worker_processes  1;
+#Specifies the path to the error log file and the level of logging.
+#In your configuration, you have set it to /var/log/nginx/error.log with the log level of warn.
 error_log  /var/log/nginx/error.log warn;
+#Specifies the path to the PID file.
 pid        /tmp/nginx.pid;
+#Specifies the event model used by Nginx. In your configuration,
+#you have set the worker_connections to 1024, which specifies the maximum number of connections each worker process can handle.
 events {
   worker_connections  1024;
 }
+#This is the main context for Nginx configuration.
 http {
+      # Browser preferred language detection
+  map $http_accept_language $language {
+    default en;
+    ~*^fr fr;
+  }
+  #Specifies the directory where Nginx will store temporary files when a client uploads a file.
   client_body_temp_path /tmp/client_temp;
+  #Specifies the directory where Nginx will store temporary files when it proxies requests.
   proxy_temp_path       /tmp/proxy_temp_path;
+  #Specifies the directory where Nginx will store temporary files when using FastCGI.
   fastcgi_temp_path     /tmp/fastcgi_temp;
+  #Specifies the directory where Nginx will store temporary files when using uWSGI.
   uwsgi_temp_path       /tmp/uwsgi_temp;
+  #Specifies the directory where Nginx will store temporary files when using SCGI.
   scgi_temp_path        /tmp/scgi_temp;
+  #Specifies the path to a file containing MIME types.
   include       /etc/nginx/mime.types;
+  #Specifies the default MIME type used for files that do not have a recognized MIME type.
   default_type  application/octet-stream;
+  #Specifies the format of the access logs
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -27,32 +48,41 @@ http {
   gzip_types
   application/javascript
   application/json
-  font/woff2
+  font/woff
   text/css
   text/plain;
 
   server {
-    listen       80;
+    listen 80;
     server_name  localhost;
+    root   /app;
+    # Redirect "/" to Angular application in the preferred language of the browser
+    rewrite ^/$ /$language/index.html permanent;
+
     location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
+      # Serve index.html file for the preferred language
+      rewrite ^/$ /$language/home permanent;
+      try_files $uri $uri/ /$language/index.html;
     }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
+
     location ~* (\.html|\/sw\.js)$ {
-      root   /app;
+      # Serve HTML files and service worker script for the preferred language
       expires -1y;
       add_header Pragma "no-cache";
       add_header Cache-Control "public";
     }
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|json)$ {
-      root   /app;
+
+    location ~* \.(js|css|png|jpg|jpeg|svg|gif|ico|json)$ {
+      # Serve static assets for the preferred language
       expires 1y;
       add_header Cache-Control "public, immutable";
+      # Include language-specific directory in the root path
+        root /app/$language/;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /usr/share/nginx/html;
     }
   }
 }
