--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-postbuild": "ng build --configuration production",
+    "heroku-postbuild": "ng build -- --configuration=production",
     "start": "ng serve",
     "start:prod": "node server.js",
     "build": "ng build",
