--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,8 @@ events {
 #This is the main context for Nginx configuration.
 http {
       # Browser preferred language detection
-  map $http_accept_language $language {
-    default en;
+  map $http_accept_language $accept_language {
+    ~*^en en;
     ~*^fr fr;
   }
   #Specifies the directory where Nginx will store temporary files when a client uploads a file.
@@ -55,14 +55,37 @@ http {
   server {
     listen 80;
     server_name  localhost;
-    root   /app;
-    # Redirect "/" to Angular application in the preferred language of the browser
-    rewrite ^/$ /$language/index.html permanent;
+    root   /usr/share/nginx/html;
 
-    location / {
-      # Serve index.html file for the preferred language
-      rewrite ^/$ /$language/home permanent;
-      try_files $uri $uri/ /$language/index.html;
+    if ($accept_language ~ "^$") {
+      set $accept_language "en";
+    }
+
+    rewrite ^/$ /$accept_language/home permanent;
+
+    # Redirect "/" to Angular application in the preferred language of the browser
+    # rewrite ^/$ /$language/home permanent;
+
+    # location = / {
+
+    #   # Serve index.html file for the preferred language
+    #   rewrite ^/$ /$language/ permanent;
+    #   try_files $uri $uri/ /$language/index.html;
+    # }
+
+    # location /fr {
+    #   alias /app/fr;
+    #   index index.html;
+    #   try_files $uri $uri/ /fr/index.html;
+    # }
+
+    # location /en {
+    #   index index.html;
+    #   try_files $uri $uri/ /en/index.html;
+    # }
+
+    location ~ ^/(fr|en) {
+        try_files $uri /$1/index.html?$args;
     }
 
     location ~* (\.html|\/sw\.js)$ {
@@ -72,12 +95,12 @@ http {
       add_header Cache-Control "public";
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|svg|gif|ico|json)$ {
+    location ~* \.(js|css|png|jpg|jpeg|svg|gif|ico|json|woff)$ {
       # Serve static assets for the preferred language
       expires 1y;
       add_header Cache-Control "public, immutable";
       # Include language-specific directory in the root path
-        root /app/$language/;
+      root /usr/share/nginx/html/$accept_language/;
     }
 
     error_page   500 502 503 504  /50x.html;
