local still work but with details rewrite

--- a/nginx.conf
+++ b/nginx.conf
@@ -61,17 +61,10 @@ http {
       set $accept_language "en";
     }
 
-    rewrite ^/$ /$accept_language/home permanent;
-
-    # Redirect "/" to Angular application in the preferred language of the browser
-    # rewrite ^/$ /$language/home permanent;
-
-    # location = / {
-
-    #   # Serve index.html file for the preferred language
-    #   rewrite ^/$ /$language/ permanent;
-    #   try_files $uri $uri/ /$language/index.html;
-    # }
+    location / {
+      try_files $uri /en/index.html;
+      rewrite ^/$ http://localhost:$server_port/$accept_language/home permanent;
+    }
 
     # location /fr {
     #   alias /app/fr;
@@ -101,6 +94,10 @@ http {
       add_header Cache-Control "public, immutable";
       # Include language-specific directory in the root path
       root /usr/share/nginx/html/$accept_language/;
+    }
+
+    location ~ \.js {
+	    add_header  Content-Type   text/javascript;
     }
 
     error_page   500 502 503 504  /50x.html;
