--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ http {
   text/plain;
 
   server {
-    listen 80;
+    listen $PORT;
     server_name  localhost;
     root   /usr/share/nginx/html;
 
@@ -63,7 +63,7 @@ http {
 
     location / {
       try_files $uri /en/index.html;
-      rewrite ^/$ http://localhost:$server_port/$accept_language/home permanent;
+      # rewrite ^/$ http://localhost:$server_port/$accept_language/home permanent;
     }
 
     # location /fr {
