--- a/nginx.conf
+++ b/nginx.conf
@@ -61,21 +61,9 @@ http {
       set $accept_language "en";
     }
 
-    location / {
-      try_files $uri /en/index.html;
-      # rewrite ^/$ http://localhost:$server_port/$accept_language/home permanent;
+    location = / {
+      return 301 https://$host/$accept_language/home;
     }
-
-    # location /fr {
-    #   alias /app/fr;
-    #   index index.html;
-    #   try_files $uri $uri/ /fr/index.html;
-    # }
-
-    # location /en {
-    #   index index.html;
-    #   try_files $uri $uri/ /en/index.html;
-    # }
 
     location ~ ^/(fr|en) {
         try_files $uri /$1/index.html?$args;
