--- a/nginx.conf
+++ b/nginx.conf
@@ -61,10 +61,6 @@ http {
       set $accept_language "en";
     }
 
-    location = / {
-      return 301 https://$host/$accept_language/home;
-    }
-
     location ~ ^/(fr|en) {
         try_files $uri /$1/index.html?$args;
     }
@@ -91,6 +87,10 @@ http {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
+    }
+
+    location = / {
+      return 301 https://wedform-front.herokuapp.com/fr/home;
     }
   }
 }
