fix name and accepted language

--- a/nginx.conf
+++ b/nginx.conf
@@ -90,7 +90,7 @@ http {
     }
 
     location = / {
-      return 301 https://wedform-front.herokuapp.com/fr/home;
+      return 301 https://wedform-front.herokuapp.com/$accept_language/home;
     }
   }
 }
