redirect URL with lang

--- a/nginx.conf
+++ b/nginx.conf
@@ -90,7 +90,7 @@ http {
     }
 
     location = / {
-      return 301 https://wedform-front.herokuapp.com/$accept_language/home;
+      return 301 http://www.huyen-et-clement.fr/$accept_language/home;
     }
   }
 }
